--- a/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="/composite/js/bootstrap/bootstrap-twipsy.js"> </script>
 		<script type="text/javascript" src="/composite/js/bootstrap/bootstrap-tooltip.js"> </script>
 		<script type="text/javascript" src="/composite/js/bootstrap/bootstrap-popover.js"> </script>
+		<script type="text/javascript" src="/composite/js/handlebars-1.0.0.beta.6.js"> </script>
 		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
