--- a/src/sdk/CompositeInspector/Views/Templates/composite.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/composite.cshtml
@@ -1,14 +1,16 @@
 ﻿<h5>{{Name}} <small>{{Description}}</small></h5>
-<h5>Configuration is valid <small>{{IsValid}}</small></h5>
 {{#unless IsValid}}
 <div class="row">
-	<div class="span3">
-		<dl>
-			<dt>Confiuration Errors</dt>
-			{{#each ConfigurationErrors}}
-			<dd>{{this}}</dd>
-			{{/each}}
-		</dl>
+	<div class="span12">
+		<div class="alert alert-error">
+			<strong>There are configuration errors</strong>
+			<dl>
+				<dt>Confiuration Errors</dt>
+				{{#each ConfigurationErrors}}
+				<dd>{{this}}</dd>
+				{{/each}}
+			</dl>
+		</div>
 	</div>
 </div>
 {{/unless}}
