--- a/src/sdk/CompositeInspector/Views/view-agent.cshtml
+++ b/src/sdk/CompositeInspector/Views/view-agent.cshtml
@@ -19,31 +19,42 @@
 	});
 
 	function pageInit() {
-		var data = EUCLID.getJsonObject("/composite/api/agent/Newco.ForumAgent");
+		var agent = window.location.href.substr(window.location.href.lastIndexOf("/") + 1);
+		var data = EUCLID.getJsonObject("/composite/api/agent/" + agent);
+		if (data != null) {
 
-		EUCLID.populateTemplate({
-			templateUrl: "/composite/ui/template/agent",
-			data: data, 
-			onComplete: function (content) { $("#agent").append($(content)); }
-		});
+			EUCLID.populateTemplate({
+				templateUrl: "/composite/ui/template/agent",
+				data: data,
+				onComplete: function (content) { $("#agent").append($(content)); }
+			});
 
-		EUCLID.populateTemplate({ 
-			templateUrl: "/composite/ui/template/commands",
-			data: data, 
-			onComplete: function (content) { $("#commands").append($(content)); } 
-		});
+			EUCLID.populateTemplate({
+				templateUrl: "/composite/ui/template/commands",
+				data: data,
+				onComplete: function (content) { $("#commands").append($(content)); }
+			});
 
-		EUCLID.populateTemplate({
-			templateUrl: "/composite/ui/template/queries",
-			data: data, 
-			onComplete: function (content) { $("#queries").append($(content)); }
-		});
+			EUCLID.populateTemplate({
+				templateUrl: "/composite/ui/template/queries",
+				data: data,
+				onComplete: function (content) { $("#queries").append($(content)); }
+			});
 
-		EUCLID.populateTemplate({
-			templateUrl: "/composite/ui/template/read-models",
-			data: data, 
-			onComplete: function (content) { $("#read-models").append($(content)); }
-		});
+			EUCLID.populateTemplate({
+				templateUrl: "/composite/ui/template/read-models",
+				data: data,
+				onComplete: function (content) { $("#read-models").append($(content)); }
+			});
+
+			EUCLID.populateTemplate({
+				templateUrl: "/composite/ui/template/composite-link",
+				data: EUCLID.getJsonObject("/composite/api/"),
+				onComplete: function (content) { $("#composite").append($(content)); }
+			});
+		}
+
+		return false;
 	}
 </script>
 
@@ -52,9 +63,11 @@
 </div>
 
 <div class="row">
-	<div class="span4" id="commands"></div>
+	<div class="span3" id="commands"></div>
 
-	<div class="span4" id="queries"></div>
+	<div class="span3" id="queries"></div>
 
-	<div class="span4" id="read-models"></div>
+	<div class="span3" id="read-models"></div>
+
+	<div class="span3" id="composite"></div>
 </div>
