completed rough draft of first level of storefront screens

--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Financials.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Financials.handlebars
@@ -1,4 +1,5 @@
 ﻿<script id="template-companyFinancials" type="text/x-handlebars-template">
 	<h3>{{title}}</h3>
-	<p>{{body}}</p>
+	<hr/>
+	<p>{{{body}}}</p>
 </script>
