--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Financials.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Financials.handlebars
@@ -1,3 +1,5 @@
 ﻿<script id="template-Financials" type="text/x-handlebars-template">
-	<h3>{{title}}</h3>
+	<h3>{{storeName}} Financials</h3>
+	<hr/>
+	<p>{{{body}}}</p>
 </script>
