--- a/apps/StorefrontAdminComposite/Content/app/templates/store/DiscountCodes.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/DiscountCodes.handlebars
@@ -1,3 +1,58 @@
 ﻿<script id="template-DiscountCodes" type="text/x-handlebars-template">
-	<h3>{{title}}</h3>
+	<h3>{{storeName}} Discount Codes</h3>
+	<hr/>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				{{#each tableHeaders}}
+				<th>{{this}}</th>
+				{{/each}}
+			</tr>
+		</thead>
+		<tbody>
+
+			{{#each tableData}}
+			<tr>
+				<td>{{this.name}}</td>
+				<td>{{this.code}}</td>
+				<td>{{this.usageType}}</td>
+				<td>{{this.usageCount}}</td>
+				<td>{{this.discount}}</td>
+				<td>
+					<div class="btn-group">
+						<a class="btn small" href="#">Action</a>
+						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a>View Details</a>
+							</li>
+							<li>
+								<a>Set Discount</a>
+							</li>
+							<li>
+								<a>Modify</a>
+							</li>
+							<li>
+								<a>Freeze</a>
+							</li>
+							<li>
+								<a>Refund</a>
+							</li>
+						</ul>
+					</div>
+				</td>
+			</tr>
+			{{/each}}
+
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="6">
+					<button class="btn pull-right">Add Discount Code</button>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </script>
