minor reorg of js

--- a/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
@@ -16,4 +16,5 @@
 <script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-typeahead.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/sammy.js")"> </script>
 @*<script type="text/javascript" src="/composite/js/euclid-0.9.js"></script>*@
+<script type="text/javascript" src="@Url.Content("~/Content/app/events.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/app/app.js")"> </script>
