--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
@@ -49,7 +49,7 @@
 		<tfoot>
 			<tr>
 				<td colspan="6">
-					<button class="btn pull-right">Add Manual Order</button>
+					<a href="#store/{{storeSlug}}/orders/add" class="btn pull-right">Add Order</a>
 				</td>
 			</tr>
 		</tfoot>
