--- a/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/Scripts.cshtml
@@ -2,18 +2,7 @@
 	src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1-vsdoc.js"> </script>
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/handlebars-1.0.0.beta.6.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-alert.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-button.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-carousel.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-collapse.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-dropdown.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-modal.js")"> </script>
-@*<script type="text/javascript" src="@Url.Content("~/Content/js/lib/bootstrap-popover.js")"> </script>*@
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-scrollspy.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-tab.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-tooltip.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-transition.js")"> </script>
-<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-typeahead.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/sammy.js")"> </script>
 @*<script type="text/javascript" src="/composite/js/euclid-0.9.js"></script>*@
 <script type="text/javascript" src="@Url.Content("~/Content/app/events.js")"> </script>
