--- a/src/sdk/CompositeInspector/Views/Templates/polling-modal.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/polling-modal.cshtml
@@ -5,7 +5,7 @@
 	</div>
 	<div class="modal-body" id="form-content">
 		<div class="alert alert-info">
-			<strong><p id="poll-status"></p></strong>
+			<strong><p id="poll-status">Polling for command results</p></strong>
 		</div>
 	</div>
 	<div class="modal-footer">
