--- a/src/sdk/CompositeInspector/Views/Templates/euclid-error.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/euclid-error.cshtml
@@ -1,5 +1,5 @@
 ﻿<div>
-	<a href="#" class="close">×</a>
+	<a href="#" class="close" data-dismiss="alert">×</a>
 	<div class='alert alert-error'>
 		<strong>{{name}}</strong> {{message}}
 		{{#if callStack}}
