--- a/src/sdk/CompositeInspector/Views/view-agent.cshtml
+++ b/src/sdk/CompositeInspector/Views/view-agent.cshtml
@@ -11,13 +11,18 @@
 <script type="text/javascript">
 	$(document).ready(function () {
 		var agentSystemName = window.location.href.substr(window.location.href.lastIndexOf("/") + 1);
-		GetData("/composite/api/agent/" + agentSystemName,
+		WorkWithDataFromUrl("/composite/api/agent/" + agentSystemName,
 			function (data) {
-				With(data).Fill("#agent").From("/composite/ui/template/agent");
-				With(data).Fill("#commands").From("/composite/ui/template/commands");
-				With(data).Fill("#queries").From("/composite/ui/template/queries");
-				With(data).Fill("#read-models").From("/composite/ui/template/read-models");
-				With(data).Fill("#composite").From("/composite/ui/template/composite-link");
+				Using(data).Fill("#agent").With("/composite/ui/template/agent");
+				Using(data).Fill("#commands").With("/composite/ui/template/commands");
+				Using(data).Fill("#queries").With("/composite/ui/template/queries");
+				Using(data).Fill("#read-models").With("/composite/ui/template/read-models");
+			}
+		);
+
+		WorkWithDataFromUrl("/composite/api",
+			function (data) {
+				Using(data).Fill("#composite").With("/composite/ui/template/composite-link"); ;
 			}
 		);
 	});
