--- a/src/sdk/CompositeInspector/Views/Templates/read-models.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/read-models.cshtml
@@ -4,6 +4,7 @@
 }
 
 <script type="text/javascript">
+	var modal = $("<div id='modal'></div>");
 	$(document).ready(function () {
 		$(".read-model").click(function () {
 			var systemName = $(this).attr("data-agent-system-name");
@@ -13,14 +14,20 @@
 			WorkWithDataFromUrl("/composite/api/readmodel/" + systemName + "/" + readModelName,
 				function (readModel) {
 					Using({ Properties: readModel })
-						.Render("/composite/ui/template/read-model")
+						.Render("/composite/ui/template/modal/read-model")
 						.Manipulate(function (content) {
-							$(target).popover({ placement: "left", html: "true", title: readModelName, content: $(content).html() });
-							$(target).popover("show");
+							$(modal).html("");
+							$(modal).append($(content));
+							$(modal).modal("show");
 						});
 				});
 
 			return false;
+		});
+
+		$(document).on("click", "#dismiss-modal", function () {
+			$("#modal").modal("hide");
+			$("#modal").remove();
 		});
 	});
 </script>
