added skeleton of storefront agent

--- a/apps/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
+++ b/apps/StorefrontAdminComposite/Views/Shared/LeftNav.cshtml
@@ -1,22 +1,22 @@
 ﻿<div class="well" style="padding: 8px 0;">
-	<ul class="nav list">
+	<ul class="nav nav-list">
 		<li class="nav-header">{Company Name}</li>
-		<li class="nav-item" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon signal"></i>&nbsp;Financials</a></li>
-		<li class="nav-item" id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon eye-open"></i>&nbsp;All Transactions</a></li>
-		<li class="nav-item" id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon user"></i>&nbsp;Employees</a></li>
+		<li class="nav-item" id="nav-exampleCompanySlugFinancials"><a href="#company/exampleCompanySlug/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
+		<li class="nav-item" id="nav-exampleCompanySlugAllTransactions"><a href="#company/exampleCompanySlug/allTransactions"><i class="icon-eye-open"></i>&nbsp;All Transactions</a></li>
+		<li class="nav-item" id="nav-exampleCompanySlugEmployees"><a href="#company/exampleCompanySlug/employees"><i class="icon-user"></i>&nbsp;Employees</a></li>
 		<li class="nav-header">{Store Name}</li>
-		<li class="nav-item" id="nav-exampleStoreSlug1Financials"><a href="#store/exampleStoreSlug1/financials"><i class="icon signal"></i>&nbsp;Financials</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug1Orders"><a href="#store/exampleStoreSlug1/orders"><i class="icon inbox"></i>&nbsp;Orders</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug1Customers"><a href="#store/exampleStoreSlug1/customers"><i class="icon user"></i>&nbsp;Customers</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug1ProductCatalog"><a href="#store/exampleStoreSlug1/productCatalog"><i class="icon th-list"></i>&nbsp;Product Catalog</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug1Promotions"><a href="#store/exampleStoreSlug1/promotions"><i class="icon exclamation-sign"></i>&nbsp;Promotions</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug1DiscountCodes"><a href="#store/exampleStoreSlug1/discountCodes"><i class="icon qrcode"></i>&nbsp;Discount Codes</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1Financials"><a href="#store/exampleStoreSlug1/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1Orders"><a href="#store/exampleStoreSlug1/orders"><i class="icon-inbox"></i>&nbsp;Orders</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1Customers"><a href="#store/exampleStoreSlug1/customers"><i class="icon-user"></i>&nbsp;Customers</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1ProductCatalog"><a href="#store/exampleStoreSlug1/productCatalog"><i class="icon-th-list"></i>&nbsp;Product Catalog</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1Promotions"><a href="#store/exampleStoreSlug1/promotions"><i class="icon-exclamation-sign"></i>&nbsp;Promotions</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug1DiscountCodes"><a href="#store/exampleStoreSlug1/discountCodes"><i class="icon-qrcode"></i>&nbsp;Discount Codes</a></li>
 		<li class="nav-header">{Store Name}</li>
-		<li class="nav-item" id="nav-exampleStoreSlug2Financials"><a href="#store/exampleStoreSlug2/financials"><i class="icon signal"></i>&nbsp;Financials</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug2Orders"><a href="#store/exampleStoreSlug2/orders"><i class="icon inbox"></i>&nbsp;Orders</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug2Customers"><a href="#store/exampleStoreSlug2/customers"><i class="icon user"></i>&nbsp;Customers</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug2ProductCatalog"><a href="#store/exampleStoreSlug2/productCatalog"><i class="icon th-list"></i>&nbsp;Product Catalog</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug2Promotions"><a href="#store/exampleStoreSlug2/promotions"><i class="icon exclamation-sign"></i>&nbsp;Promotions</a></li>
-		<li class="nav-item" id="nav-exampleStoreSlug2DiscountCodes"><a href="#store/exampleStoreSlug2/discountCodes"><i class="icon qrcode"></i>&nbsp;Discount Codes</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2Financials"><a href="#store/exampleStoreSlug2/financials"><i class="icon-signal"></i>&nbsp;Financials</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2Orders"><a href="#store/exampleStoreSlug2/orders"><i class="icon-inbox"></i>&nbsp;Orders</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2Customers"><a href="#store/exampleStoreSlug2/customers"><i class="icon-user"></i>&nbsp;Customers</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2ProductCatalog"><a href="#store/exampleStoreSlug2/productCatalog"><i class="icon-th-list"></i>&nbsp;Product Catalog</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2Promotions"><a href="#store/exampleStoreSlug2/promotions"><i class="icon-exclamation-sign"></i>&nbsp;Promotions</a></li>
+		<li class="nav-item" id="nav-exampleStoreSlug2DiscountCodes"><a href="#store/exampleStoreSlug2/discountCodes"><i class="icon-qrcode"></i>&nbsp;Discount Codes</a></li>
 	</ul>
 </div>
