--- a/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/AllTransactions.handlebars
@@ -38,5 +38,33 @@
 			{{/each}}
 
 		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="6">
+					<div class="pagination pagination-right">
+						<ul>
+							<li>
+								<a href="#">Prev</a>
+							</li>
+							<li class="active">
+								<a href="#">1</a>
+							</li>
+							<li>
+								<a href="#">2</a>
+							</li>
+							<li>
+								<a href="#">3</a>
+							</li>
+							<li>
+								<a href="#">4</a>
+							</li>
+							<li>
+								<a href="#">Next</a>
+							</li>
+						</ul>
+					</div>
+				</td>
+			</tr>
+		</tfoot>
 	</table>
 </script>
