added pagination and some more general structure

--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
@@ -1,7 +1,7 @@
 ﻿<script id="template-companyEmployees" type="text/x-handlebars-template">
 	<h3>{{companyName}} Employees</h3>
 	<hr/>
-	<button class="btn-primary pull-right">Add Employee</button>
+	<button class="btn btn-primary pull-right">Add Employee</button>
 	<table class="table table-striped">
 		<thead>
 			<tr>
