--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
@@ -1,6 +1,7 @@
 ﻿<script id="template-storeOrders" type="text/x-handlebars-template">
 	<h3>{{storeName}} Orders</h3>
 	<hr/>
+	<a href="#store/{{storeSlug}}/orders/add" class="btn btn-primary pull-right">Add Order</a>
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -49,7 +50,28 @@
 		<tfoot>
 			<tr>
 				<td colspan="6">
-					<a href="#store/{{storeSlug}}/orders/add" class="btn pull-right">Add Order</a>
+					<div class="pagination pagination-right">
+						<ul>
+							<li>
+								<a href="#">Prev</a>
+							</li>
+							<li class="active">
+								<a href="#">1</a>
+							</li>
+							<li>
+								<a href="#">2</a>
+							</li>
+							<li>
+								<a href="#">3</a>
+							</li>
+							<li>
+								<a href="#">4</a>
+							</li>
+							<li>
+								<a href="#">Next</a>
+							</li>
+						</ul>
+					</div>
 				</td>
 			</tr>
 		</tfoot>
