--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
@@ -1,6 +1,7 @@
 ﻿<script id="template-Promotions" type="text/x-handlebars-template">
 	<h3>{{storeName}} Promotions</h3>
 	<hr/>
+	<button class="btn btn-primary pull-right">Add Promotion</button>
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -50,7 +51,28 @@
 		<tfoot>
 			<tr>
 				<td colspan="6">
-					<button class="btn pull-right">Add Promotion</button>
+					<div class="pagination pagination-right">
+						<ul>
+							<li>
+								<a href="#">Prev</a>
+							</li>
+							<li class="active">
+								<a href="#">1</a>
+							</li>
+							<li>
+								<a href="#">2</a>
+							</li>
+							<li>
+								<a href="#">3</a>
+							</li>
+							<li>
+								<a href="#">4</a>
+							</li>
+							<li>
+								<a href="#">Next</a>
+							</li>
+						</ul>
+					</div>
 				</td>
 			</tr>
 		</tfoot>
