sketched out more screens

--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Customers.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Customers.handlebars
@@ -1,7 +1,7 @@
 ﻿<script id="template-Customers" type="text/x-handlebars-template">
 	<h3>{{storeName}} Customers</h3>
 	<hr/>
-	<button class="btn btn-primary pull-right">Invite Customer</button>
+	<a href="#store/{{storeSlug}}/customers/invite" class="btn btn-primary pull-right">Invite Customer</a>
 	<table class="table table-striped">
 		<thead>
 			<tr>
