--- a/apps/StorefrontAdminComposite/Content/app/templates/store/DiscountCodes.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/DiscountCodes.handlebars
@@ -1,7 +1,7 @@
 ﻿<script id="template-DiscountCodes" type="text/x-handlebars-template">
 	<h3>{{storeName}} Discount Codes</h3>
 	<hr/>
-	<button class="btn btn-primary pull-right">Add Discount Code</button>
+	<a href="#store/{{storeSlug}}/discountCodes/add" class="btn btn-primary pull-right">Add Discount Code</a>
 	<table class="table table-striped">
 		<thead>
 			<tr>
