--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
@@ -1,7 +1,7 @@
 ﻿<script id="template-Promotions" type="text/x-handlebars-template">
 	<h3>{{storeName}} Promotions</h3>
 	<hr/>
-	<button class="btn btn-primary pull-right">Add Promotion</button>
+	<a href="#store/{{storeSlug}}/promotions/add" class="btn btn-primary pull-right">Add Promotion</a>
 	<table class="table table-striped">
 		<thead>
 			<tr>
