--- a/apps/StorefrontAdminComposite/Content/app/templates/store/ProductCatalog.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/ProductCatalog.handlebars
@@ -1,7 +1,7 @@
 ﻿<script id="template-ProductCatalog" type="text/x-handlebars-template">
 	<h3>{{storeName}} Product Catalog</h3>
 	<hr/>
-	<button class="btn btn-primary pull-right">Add Product</button>
+	<a href="#store/{{storeSlug}}/productCatalog/add" class="btn btn-primary pull-right">Add Product</a>
 	<table class="table table-striped">
 		<thead>
 			<tr>
