--- a/src/sdk/CompositeInspector/Views/Templates/queries.cshtml
+++ b/src/sdk/CompositeInspector/Views/Templates/queries.cshtml
@@ -18,8 +18,10 @@
 						$(modal).html("");
 						$(modal).append(content);
 						$(modal).modal("show");
-					});
+				});
 			});
+
+			return false;
 		});
 	});
 </script>
