--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Orders.handlebars
@@ -20,8 +20,8 @@
 				<td>{{this.amount}}</td>
 				<td>
 					<div class="btn-group">
-						<a class="btn small" href="#">Action</a>
-						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							Actions
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
