--- a/apps/StorefrontAdminComposite/Content/app/templates/store/ProductCatalog.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/ProductCatalog.handlebars
@@ -22,25 +22,13 @@
 				<td>{{this.discount}}</td>
 				<td>
 					<div class="btn-group">
-						<a class="btn small" href="#">Action</a>
-						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							Actions
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a>View Details</a>
-							</li>
-							<li>
-								<a>Set Discount</a>
-							</li>
-							<li>
-								<a>Modify</a>
-							</li>
-							<li>
-								<a>Freeze</a>
-							</li>
-							<li>
-								<a>Refund</a>
+								<a href="#store/{{../storeSlug}}/productCatalog/exampleProductSlug/details">View Details</a>
 							</li>
 						</ul>
 					</div>
