--- a/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/company/Employees.handlebars
@@ -21,13 +21,13 @@
 				<td>{{this.location}}</td>
 				<td>
 					<div class="btn-group">
-						<a class="btn small" href="#">Action</a>
-						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							Actions
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a>View Profile</a>
+								<a href="#company/{{../companySlug}}/employees/exampleEmployeeSlug/details">View Profile</a>
 							</li>
 							<li>
 								<a>Suspend/Deactivate</a>
