--- a/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
+++ b/apps/StorefrontAdminComposite/Content/app/templates/store/Promotions.handlebars
@@ -21,26 +21,14 @@
 				<td>{{this.discount}}</td>
 				<td>
 					<div class="btn-group">
-						<a class="btn small" href="#">Action</a>
-						<a class="btn small dropdown-toggle" data-toggle="dropdown" href="#">
+						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							Actions
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a>View Details</a>
-							</li>
-							<li>
-								<a>Set Discount</a>
-							</li>
-							<li>
-								<a>Modify</a>
-							</li>
-							<li>
-								<a>Freeze</a>
-							</li>
-							<li>
-								<a>Refund</a>
-							</li>
+								<a href="#store/{{../storeSlug}}/promotions/examplePromotionSlug/details">View Details</a>
+							</li>							
 						</ul>
 					</div>
 				</td>
